syntax = "proto3";
package tibc.core.types.v1;

option go_package = "github.com/bianjieai/tibc-go/modules/tibc/core/types";

import "gogoproto/gogo.proto";
import "tibc/core/client/v1/genesis.proto";
import "tibc/core/packet/v1/genesis.proto";
import "tibc/core/routing/v1/genesis.proto";

// GenesisState defines the tibc module's genesis state.
message GenesisState {
  // ICS002 - Clients genesis state
  tibc.core.client.v1.GenesisState client_genesis = 1
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"client_genesis\""];
  // ICS004 - Packet genesis state
  tibc.core.packet.v1.GenesisState packet_genesis = 3
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"packet_genesis\""];
  // ICS026 - Routing genesis state
  tibc.core.routing.v1.GenesisState routing_genesis = 4
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"routing_genesis\""];
}
